[project]
name = "ziyun_labelkit"
description = ""
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["numpy>=1.24", "Pillow>=9.0", "# pillow-jxl-plugin  # Optional: for .jxl image support", "torch>=1.10  # For torch.cat compatibility"]

[project.urls]
Repository = "https://github.com/DNPMBHC/ComfyUI-ZiYun_LabelKit"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/DNPMBHC/ComfyUI-ZiYun_LabelKit/wiki"
"Bug Tracker" = "https://github.com/DNPMBHC/ComfyUI-ZiYun_LabelKit/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-ZiYun_LabelKit"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

